--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">O mnie</a>
+            <a href="{{ site.baseurl }}/o-mnie">O mnie</a>
           </nav>
         </header>
       </div>
