--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,5 +9,7 @@ layout: default
     {{ content }}
   </div>
 
+  <a onclick="window.history.back()">Powrót</a>
+  
   {% include disqus.html %}
 </article>
